features: logo out and scrolling

--- a/index.html
+++ b/index.html
@@ -12,14 +12,47 @@
 <main>
     <div id='logo' class='logo'>
         <img src='assets/images/vwm-anim.svg' alt=''>
+        <img src='assets/images/vwm-anim-fadeOut.svg' alt=''>
     </div>
-    <div class='menu'>
-        <div class='label'>
-            <div class='label-image'>
-                <img src='assets/images/fea-image.svg' alt=''>
+    <div id='menu' class='menu'>
+        <div class='menu-pseudo'>
+            <div class='label'>
+                <div class='label-image'>
+                    <img src='assets/images/cad-image.svg' alt=''>
+                </div>
+                <div class='label-text'>
+                    <img class='label-text-image' src='assets/images/cad.svg' alt=''>
+                </div>
             </div>
-            <div class='label-text'>
-                <img src='assets/images/fea.svg' alt=''>
+        </div>
+        <div class='menu-pseudo mod'>
+            <div class='label'>
+                <div class='label-image'>
+                    <img src='assets/images/trajectory-image.svg' alt=''>
+                </div>
+                <div class='label-text'>
+                    <img class='label-text-image' src='assets/images/trajectory.svg' alt=''>
+                </div>
+            </div>
+        </div>
+        <div class='menu-pseudo'>
+            <div class='label'>
+                <div class='label-image'>
+                    <img src='assets/images/fea-image.svg' alt=''>
+                </div>
+                <div class='label-text'>
+                    <img class='label-text-image' src='assets/images/fea.svg' alt=''>
+                </div>
+            </div>
+        </div>
+        <div class='menu-pseudo'>
+            <div class='label'>
+                <div class='label-image'>
+                    <img src='assets/images/cfd-image.svg' alt=''>
+                </div>
+                <div class='label-text'>
+                    <img class='label-text-image' src='assets/images/cfc.svg' alt=''>
+                </div>
             </div>
         </div>
         <div class='menu-inner'></div>
