update scroll-magic effect and fade out logo

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
 <main>
     <div id='logo' class='logo'>
-        <img src='assets/images/vwm-anim.svg' alt=''>
-        <img src='assets/images/vwm-anim-fadeOut.svg' alt=''>
+        <img src='assets/images/vwm-anim-v2.svg' alt=''>
+        <img src='assets/images/vwm-anim-fadeOut-v2.svg' alt=''>
     </div>
     <div id='menu' class='menu'>
+        <div id='menu-core' class='menu-core'></div>
         <div class='menu-pseudo'>
             <div class='label'>
                 <div class='label-image'>
