--- a/index.html
+++ b/index.html
@@ -1934,6 +1934,13 @@
     </script>
 </head>
 <style>
+    @font-face {
+        font-family: "Helvetica";
+        src: url("./assets/fonts/helvetica.otf") format("opentype");
+        font-weight: 400;
+        font-style: normal;
+    }
+
     .logo {
         width: 100%;
         height: 100%;
@@ -1964,16 +1971,18 @@
         left: 50%;
         transform: translate(-50%, 0);
         z-index: 1;
-        font-size: 10px;
+        font-size: 12px;
         color: #78A3C4;
         width: 100%;
         margin: 0;
         text-align: center;
+        font-family: Helvetica, sans-serif;
+        font-weight: 400;
     }
 
     .logo-inner {
         position: relative;
-        width: 10%;
+        width: 190px;
         opacity: 1;
     }
 
